fix: icon color and spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -464,7 +464,11 @@ swd-input label { color: var(--theme-text-grey-color); cursor: text; }
 swd-input:has(input:focus, select:focus, textarea:focus, input[selected], select[selected], textarea[selected]) label { color: var(--theme-primary-color) }
 swd-input swd-input-range { position: absolute; transform: translateY(100%); bottom: -2px; right: 0; color: var(--theme-text-grey-color); }
 swd-input swd-input-error { position: absolute; transform: translateY(100%); bottom: -2px; left: 0; color: var(--theme-error-color); display: none }
-swd-input:has(input:user-invalid, select:user-invalid, textarea:user-invalid, input[invalid], select[invalid], textarea[invalid]) swd-input-error { display: inherit }
+swd-input:has(*:user-invalid, *[invalid]) swd-input-error { display: inherit }
+
+swd-input:has(swd-icon) input, swd-input:has(swd-icon) select, swd-input:has(swd-icon) textarea {
+    width: calc(100% - 1em - round(0.5em, 1px));
+}
 
 swd-input swd-icon {
     position: absolute;
@@ -525,6 +529,11 @@ swd-menu {
     background-color: var(--theme-primary-color);
     z-index: 3;
     overflow: hidden;
+}
+
+swd-menu * {
+    --theme-text-color: white;
+    color: white;
 }
 
 swd-menu:hover { overflow: auto }
